--- a/src/main/resources/com/akknapik/mazesimulator/algorithm-selection.fxml
+++ b/src/main/resources/com/akknapik/mazesimulator/algorithm-selection.fxml
@@ -1,16 +1,108 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.akknapik.mazesimulator.MazeSimulatorController">
-  <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-  </padding>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.TextFlow?>
 
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1030.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.akknapik.mazesimulator.MazeSimulatorController">
+  <center>
+    <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <children>
+        <RadioButton fx:id="rKruskal" layoutX="80.0" layoutY="142.0" mnemonicParsing="false" onAction="#printAlgorithmDescription" text="Kruskal's algorithm">
+          <font>
+            <Font name="Arial Black" size="24.0" />
+          </font>
+               <toggleGroup>
+                  <ToggleGroup fx:id="generateAlgorithm" />
+               </toggleGroup>
+        </RadioButton>
+        <RadioButton fx:id="rPrim" layoutX="80.0" layoutY="192.0" mnemonicParsing="false" onAction="#printAlgorithmDescription" text="Prim's algorithm" toggleGroup="$generateAlgorithm">
+          <font>
+            <Font name="Arial Black" size="24.0" />
+          </font>
+        </RadioButton>
+        <RadioButton fx:id="rDFS" layoutX="80.0" layoutY="242.0" mnemonicParsing="false" text="DFS algorithm" toggleGroup="$generateAlgorithm">
+          <font>
+            <Font name="Arial Black" size="24.0" />
+          </font>
+        </RadioButton>
+        <RadioButton fx:id="rHaK" layoutX="80.0" layoutY="292.0" mnemonicParsing="false" text="Hunt-and-Kill algorithm" toggleGroup="$generateAlgorithm">
+          <font>
+            <Font name="Arial Black" size="24.0" />
+          </font>
+        </RadioButton>
+        <RadioButton fx:id="rEller" layoutX="80.0" layoutY="342.0" mnemonicParsing="false" text="Eller's algorithm" toggleGroup="$generateAlgorithm">
+          <font>
+            <Font name="Arial Black" size="24.0" />
+          </font>
+        </RadioButton>
+        <RadioButton fx:id="rAldousBroder" layoutX="80.0" layoutY="392.0" mnemonicParsing="false" text="Aldous-Broder algorithm" toggleGroup="$generateAlgorithm">
+          <font>
+            <Font name="Arial Black" size="24.0" />
+          </font>
+        </RadioButton>
+        <RadioButton fx:id="rGrowingTree" layoutX="80.0" layoutY="442.0" mnemonicParsing="false" text="Growing Tree algorithm" toggleGroup="$generateAlgorithm">
+          <font>
+            <Font name="Arial Black" size="24.0" />
+          </font>
+        </RadioButton>
+        <RadioButton fx:id="rBacktracking" layoutX="80.0" layoutY="492.0" mnemonicParsing="false" text="Backtracking algorithm" toggleGroup="$generateAlgorithm">
+          <font>
+            <Font name="Arial Black" size="24.0" />
+          </font>
+        </RadioButton>
+        <Label layoutX="80.0" layoutY="104.0" text="Select an algorithm to generate the maze:">
+          <font>
+            <Font name="Arial Black" size="24.0" />
+          </font>
+        </Label>
+        <TextField fx:id="selectMazeSize" layoutX="157.0" layoutY="606.0" promptText="max. 100">
+               <font>
+                  <Font size="18.0" />
+               </font></TextField>
+        <Label layoutX="80.0" layoutY="559.0" text="Enter the size of the maze (n x n)">
+          <font>
+            <Font name="Arial Black" size="24.0" />
+          </font>
+        </Label>
+        <Button layoutX="197.0" layoutY="748.0" mnemonicParsing="false" onAction="#generate" text="Generate">
+          <font>
+            <Font name="Arial Black" size="24.0" />
+          </font>
+        </Button>
+        <Separator layoutX="100.0" prefHeight="5.0" prefWidth="1720.0" />
+        <Label layoutX="1169.0" layoutY="104.0" text="Algorithm description:">
+          <font>
+            <Font name="Arial Black" size="24.0" />
+          </font>
+        </Label>
+        <Separator layoutX="688.0" layoutY="121.0" orientation="VERTICAL" prefHeight="705.0" />
+        <TextFlow fx:id="descriptionText" layoutX="796.0" layoutY="140.0" prefHeight="577.0" prefWidth="1018.0" style="-fx-border-width: 1; -fx-border-color: black; -fx-background-color: lightgray;" textAlignment="CENTER" />
+        <Label fx:id="error" layoutX="198.0" layoutY="639.0" prefHeight="15.0" prefWidth="0.0" />
+            <Label fx:id="errorLabel" layoutX="111.0" layoutY="669.0" textAlignment="CENTER" textFill="RED">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+      </children>
+    </Pane>
+  </center>
+  <top>
+    <Pane prefHeight="125.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
+      <children>
+        <Label layoutX="830.0" layoutY="37.0" text="MAZE SIMULATOR" textAlignment="CENTER" textOverrun="CLIP">
+          <font>
+            <Font name="ArtifaktElement-Heavy" size="36.0" />
+          </font>
+        </Label>
+      </children>
+    </Pane>
+  </top>
+</BorderPane>
