--- a/src/main/resources/com/akknapik/mazesimulator/maze-simulator.fxml
+++ b/src/main/resources/com/akknapik/mazesimulator/maze-simulator.fxml
@@ -64,7 +64,7 @@
                </font>
             </Label>
             <ChoiceBox fx:id="chbAlgorithm" layoutX="817.0" layoutY="54.0" prefWidth="300.0" visible="false" />
-            <Button fx:id="bStart" layoutX="1250.0" layoutY="33.0" mnemonicParsing="false" text="Start" visible="false">
+            <Button fx:id="bStart" layoutX="1250.0" layoutY="33.0" mnemonicParsing="false" onAction="#startSolver" text="Start" visible="false">
                <font>
                   <Font size="18.0" />
                </font>
