--- a/src/main/resources/com/akknapik/mazesimulator/algorithm-selection.fxml
+++ b/src/main/resources/com/akknapik/mazesimulator/algorithm-selection.fxml
@@ -53,7 +53,7 @@
             <Font name="Arial Black" size="24.0" />
           </font>
         </RadioButton>
-        <RadioButton fx:id="rBacktracking" layoutX="80.0" layoutY="492.0" mnemonicParsing="false" text="Backtracking algorithm" toggleGroup="$generateAlgorithm">
+        <RadioButton fx:id="rFractalTessellation" layoutX="80.0" layoutY="492.0" mnemonicParsing="false" text="Fractal Tessellation algorithm" toggleGroup="$generateAlgorithm">
           <font>
             <Font name="Arial Black" size="24.0" />
           </font>
