--- a/src/main/resources/com/akknapik/mazesimulator/algorithm-selection.fxml
+++ b/src/main/resources/com/akknapik/mazesimulator/algorithm-selection.fxml
@@ -29,7 +29,7 @@
             <Font name="Arial Black" size="24.0" />
           </font>
         </RadioButton>
-        <RadioButton fx:id="rDFS" layoutX="80.0" layoutY="242.0" mnemonicParsing="false" onAction="#printAlgorithmDescription" text="DFS algorithm" toggleGroup="$generateAlgorithm">
+        <RadioButton fx:id="rBacktracking" layoutX="80.0" layoutY="242.0" mnemonicParsing="false" onAction="#printAlgorithmDescription" text="Recursive Backtracking algorithm" toggleGroup="$generateAlgorithm">
           <font>
             <Font name="Arial Black" size="24.0" />
           </font>
